# Agentic-supply-chain-assistant

./: .env.example  .gitignore  ARCHITECTURE_VISUAL.md  DISTRIBUTED_ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART_DISTRIBUTED.md  README.md  des.md  docker-compose.prod.yml  docker-compose.yml  env.md  main.py  output.json  project_setup.md  pyproject.toml  requirements.txt  run_setup.py  uv.toml
.github/: copilot-instructions.md
agents/: base_agent.py  distributed_orchestrator.py  expiry_agent.py  graph_agent.py  orchestrator.py  product_agent.py  supply_chain_agent.py
config/: agent_config.py  db_config.py  llm_config.py  logging_config.py  mcp_config.py  neo4j_config.py  redis_config.py
database/: neo4j_connector.py  postgres_client.py  redis_client.py
llm/: llama_client.py
mcp_servers/: __init__.py  base_server.py  expiry_server.py  graph_server.py  orchestrator_server.py  product_server.py  supply_chain_server.py
plan/: oracle-cloud-architecture.md  oracle-cloud-deployment-plan.md  oracle-cloud-quick-reference.md
schemas/: expiry_tracking_schema.sql  inventory_mgmt_schema.sql  redis_schema.md  store_catalog_schema.sql
scripts/: 01_generate_data.py  02_setup_postgresql.py  03_setup_mongodb.py  04_verify_setup.py  05_realtime_simulator.py  06_create_knowledge_graph.py  07_test_queries.py  08_visualize_graph.py  09_setup_redis.py  10_start_mcp_servers.py  11_test_agents.py  12_test_distributed_orchestrator.py  deploy-oracle-cloud.sh
synthetic_data/: shipments.json  warehouses.json
ui/: streamlit_app.py
